# personal-github-dashboard

./: .codacy.yaml  .codespellignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  task-master.config.js
backend/: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  REDIS_SETUP.md  backup_before_uuid.sql  migrate_to_uuid.sql  rustfmt.toml
backend/.sqlx/: query-0760efa14cc2c1b5b8db14a31f061ac703ab9d08b8bd84d8041d4e14e4feba13.json  query-0a2eaef4123ab2a96e4ee99ba3dafa6e685e8e1c418684a70212e6a82227258b.json  query-162342c8c70c0644c7abfa9dfdea7e17a7d85575353070af8844ecc922f71412.json  query-31f8de45cf1b8662371e8cb45502d16e294c7fc3eb217f46cc35de6b25d9e6fd.json  query-4066ef1a5d5bb8f240a02c467bd94f263392065ce08250edee3f66a43fd250d9.json  query-48759e49aaca5608505a8b174e7bd3e54c858112d166ac5d349834928bfcab5e.json  query-4b65fb10220d24457fc3a6b0d0dfbeea32bdd234dc966cd076024d202365a687.json  query-4f5824e39db6a8d0396abc7f71031caf828a1baf7f891ace3b3d260270c4051c.json  query-5798fd53e9188cf6df82c26fd6bcf9a17523907ff73f21293459c8f9da93216b.json  query-677e8fdafcbb8c16ad02bc45ac42e33b4127c9cb9b752868e470919b16f30679.json  query-6780da8638b4fcf4d192ac63d34817b5cb601381a472237ddd6fefb3b9121d88.json  query-7feb7dbed55f3192432fed1455de45591e16aee07d12c2ec0a87433a8eb885fd.json  query-8524c3af4f1f8957a868a124b06e56e4d39d126e248cc5584e3276fc68168933.json  query-8cdd5e0bdbba73476b496187fb99a65d7aed66f5f40e8e4e3570fad998a98863.json  query-94022a46dbee9f7806be7e81b0ea8ac68d1177896970522136f7be878710bc83.json  query-98e330e4ead65a01d1dcfdee2484b96f33e2f6514f0c362b02923491ab143c39.json  query-b7041348f57ff159feef3843d580b0f38e6794a3f959f8fe54c94d0527c5aaf2.json  query-c408a88121bef929086d82abd1ab28e8fae576de894aefa2de763f6c9a8f9039.json  query-e16f887d96200b7b071bbb11f2502f73068c8d88d57cf98277420719d2f1c2f6.json  query-fbd58275fe34467c70a20a9b928cf7de3bcb1a820e81dce10848cddb0874a57f.json
backend/manual_migrations/: backup_before_uuid.sql
backend/migrations/: 20240320000000_create_organizations.sql  20240321000000_create_analytics_tables.sql  20240321000001_create_test_and_dependency_tables.sql  20240321000002_create_health_tables.sql  20240321000003_create_analytics_tables.sql  20240321000004_create_health_tables.sql  20240321000005_create_risk_and_bottleneck_tables.sql  20240321000006_create_review_tables.sql  20240321000007_fix_missing_tables.sql  20240321000008_create_remaining_tables.sql  20240321000009_create_remaining_tables.sql  20240321000010_create_test_runs_table.sql  20240321000011_cleanup_triggers.sql  20240321000012_create_risk_indicators_table.sql  20240321000013_fix_triggers.sql  20240406000000_clean_schema.sql  20240407000000_enhance_schema.sql  20240407000000_initial_schema.sql  20240408000000_cleanup.sql  20240408000001_initial_schema.sql  20240408000003_initial_schema.sql  20240415000001_notifications_and_metrics.sql  20240421000000_consolidated_schema.sql  20250421090000_add_activities_table.sql  20250422060000_full_schema.sql  20250425061000_recreate_users_uuid.sql  20250425063000_add_is_private_to_repositories.sql  20250425064000_recreate_orgs_repos_activities_uuid.sql  20250425065000_add_org_id_to_activities.sql  20250425070000_add_details_to_activities.sql  20250429110000_create_oauth_tokens_table.sql
backend/migrations/20240101000000_initial_schema/: down.sql  up.sql
backend/src/: analytics.rs  cache.rs  collaboration.rs  db.rs  error.rs  health.rs  lib.rs  main.rs  models.rs  project_health.rs  routes.rs  state.rs  trends.rs
backend/src/api/: analytics.rs  mod.rs  organizations.rs  repository.rs  routes.rs  sync.rs
backend/src/config/: mod.rs
backend/src/db/: connection.rs  metrics.rs  mod.rs  models.rs  notifications.rs
backend/src/github/: api.rs  mod.rs  service.rs  sync.rs
backend/src/handlers/: activities.rs  activity.rs  auth.rs  github.rs  health.rs  metrics.rs  mod.rs  notifications.rs  organizations.rs  repositories.rs  users.rs
backend/src/middleware/: auth.rs  error_handler.rs  logging.rs  mod.rs  rate_limit.rs
backend/src/models/: activity.rs  jwt.rs  mod.rs  notification.rs  oauth_token.rs  organization.rs  repository.rs  user.rs
backend/src/redis/: mod.rs
backend/src/routes/: analytics.rs  (+9 more)
backend/tests/: activity_cache_integration.rs  integration_caching.rs  organization_cache_integration.rs  repository_cache_integration.rs  test_auth.sh  user_cache.rs  user_cache_integration.rs
(+140 files in other folders)
