[package]
name = "personal-github-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "personal-github-dashboard"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-session = "0.7"
actix-identity = "0.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.0", features = ["full"] }

# Caching
redis = { version = "0.26.0", features = ["tokio-comp", "connection-manager"] }

# GitHub API
octocrab = "0.32"
reqwest = { version = "0.11", features = ["json", "cookies"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.4", features = ["serde", "v4"] }
futures = "0.3"
async-trait = "0.1"

# WebSocket
actix-web-actors = "4.2"
actix = "0.13"

# Rate limiting
actix-ratelimit = "0.3"

# OAuth2
oauth2 = "4.4"

# URL
url = "2.5"

# Random
rand = "0.8"

derive_more = "0.99"
