[package]
name = "personal-github-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "personal-github-dashboard"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-session = { version = "0.8.0", features = ["redis-rs-session", "cookie-session"] }
actix-identity = "0.5"
cookie = "0.16"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json"] }
tokio = { version = "1.0", features = ["full"] }

# Caching
redis = { version = "0.23.0", features = ["tokio-comp"] }

# GitHub API
octocrab = "0.44.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.0"
rand = "0.8"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
futures = "0.3.28"
async-trait = "0.1"

# WebSocket
actix-web-actors = "4.2"
actix = "0.13"

# Rate limiting
actix-ratelimit = "0.3"

# OAuth2
oauth2 = "4.4"

# URL
url = "2.5"

derive_more = "0.99"

governor = "0.6.0"
nonzero_ext = "0.3.0"

# Error handling
thiserror = "1.0"

time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
