[package]
name = "personal-github-dashboard"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "personal-github-dashboard"
path = "src/main.rs"

[lib]
name = "personal_github_dashboard"
path = "src/lib.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.6"
actix-session = { version = "0.8", features = ["redis-rs-session"] }
actix-identity = "0.5"
cookie = "0.16"

# Database
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.0", features = ["full"] }

# Caching
redis = "0.23"

# GitHub API
octocrab = "0.44.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
time = "0.3"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "8"
rand = "0.8"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3.28"
async-trait = "0.1"

# WebSocket
actix-web-actors = "4.2"
actix = "0.13"

# OAuth2
oauth2 = "4.4"

# URL
url = "2.5"

derive_more = "0.99"

# Error handling
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"
actix-governor = "0.6"
actix-web-httpauth = "0.8"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.11"

# Testing
actix-rt = "2"

# Encryption/Decryption
ring = "0.17"

# Lazy initialization
once_cell = "1.18.0"

# Optional: Remove unused or heavy dependencies (manual audit required)
# Example: Remove octocrab if not used, or replace with lighter alternative
# [dependencies]
# octocrab = "0.44.0"  # Remove if not used

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[profile.dev]
opt-level = 1

[dev-dependencies]
actix-service = "2"
serial_test = "0.6.0"
